# 21csim

./: .gitignore  21csim-ai-integration-spec.md  21csim-complete-spec-v2.md  21csim-diversity-calibration.md  21csim-domain-infrastructure-spec.md  21csim-future-roadmap.md  21csim-llm-provider-spec.md  21csim-narration-strategy-final.md  21csim-node-expansion-350.md  README.md  pyproject.toml
scripts/: Modelfile  backfill_narrations.py  extract_training_data.py  generate_social_cards.py  generate_voice_narrations.py  generate_voice_openai.py  train_narrator.py
src/csim/: __init__.py  analysis.py  cli.py  engine.py  exporter.py  graph.py  models.py  reality.py  renderer.py  sound.py  world_state.py
tests/: test_engine.py  test_graph.py  test_llm.py  test_models.py  test_sound.py  test_world_state.py
web/: _headers  _redirects  about.html  about.js  app.js  batch-10k.json  controls.js  dashboard.js  explore.html  explore.js  findings.html  findings.js  index.html  nav.js  nodes-catalog.json  selector.js  serve.py  sound.js  styles.css  viewer.js
web/runs/: index.json  seed_10268.json  seed_10376.json  seed_10459.json  seed_10703.json  seed_10704.json  seed_10800.json  seed_11010.json  seed_11153.json  seed_11160.json  seed_11213.json  seed_11268.json  seed_11687.json  seed_11766.json  seed_11807.json  seed_11854.json  seed_11937.json  seed_12072.json  seed_1209.json  seed_12490.json  seed_12762.json  seed_12773.json  seed_12948.json  seed_13171.json  seed_13263.json  seed_13378.json  seed_13617.json  seed_1363.json  seed_139.json  seed_13976.json  seed_14030.json  (+437 more)
(+924 files in other folders)
